added link to allow deletions

--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,6 +1,9 @@
 <h2>All Videos:</h2>
 <ul>
 <% @videos.each do |video| %>
-<li><%= link_to video.title, "/videos/#{video.id}" %></li>
+	<li><%= link_to video.title, "/videos/#{video.id}" %>
+		<%= link_to "delete this video" , "/videos/#{video.id}", method: :delete %>
+	</li>
 <% end %>
 </ul>
+
