--- a/app/views/sounds/index.html.erb
+++ b/app/views/sounds/index.html.erb
@@ -1,8 +1,9 @@
 <h2>All Sounds:</h2>
 <ul>
 <% @sounds.each do |sound| %>
-<li><%= link_to sound.title, "/sounds/#{sound.id}" %>
-	<%= link_to "delete this video" , "/sounds/#{sound.id}", method: :delete %>
-</li>
+	<li>
+		<%= link_to sound.title, "/sounds/#{sound.id}" %>
+		<%= link_to "delete this video" , "/sounds/#{sound.id}", method: :delete %>
+	</li>
 <% end %>
 </ul>
