--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -4,3 +4,21 @@
 
 <iframe width="420" height="315" src="//www.youtube.com/embed/<%= @video.youtube_id %>" frameborder="0" allowfullscreen></iframe>
 
+
+<ul>
+	<% @video.comments.each do |comment| %>
+		<li> <%= comment.comment %> </li>
+	<% end %>
+</ul>
+
+
+<%= form_tag("/videos/#{@video.id}/comments", method:"post") do %>
+
+	<%= label_tag("comment[comment]", "Write a comment") %>
+	<%= text_field_tag("comment[comment]") %>
+	<%= hidden_field_tag('comment[video_id]', @video.id) %>
+	<%= submit_tag("submit") %>
+
+<% end %>
+
+
