--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -7,7 +7,10 @@
 
 <ul>
 	<% @video.comments.each do |comment| %>
-		<li> <%= comment.comment %> </li>
+		<li class="comment"> <%= comment.comment %> </li>
+		<button class="edit-comment-button">Edit comment</button>
+		<input class="comment_id"type="hidden" value="<%=comment.id%>">
+		<input class="video_id"type="hidden" value="<%=@video.id%>">
 	<% end %>
 </ul>
 
@@ -20,5 +23,6 @@
 	<%= submit_tag("submit") %>
 
 <% end %>
+
 
 
